# huml-rs

./: .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  test.huml
benches/: huml_benchmarks.rs  serde_benchmarks.rs
examples/: serde_example.rs
scripts/: bench.sh  standard_tests.sh
src/: lib.rs  parser.rs  serde.rs  standard_tests.rs
src/serde/: de.rs  mod.rs  ser.rs
