[package]
name = "huml-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/huml-lang/huml-rs"
homepage = "https://huml.io"
description = "A Rust parser for HUML (Human-usable Markup Language)"
keywords = ["huml", "huml-rs", "parsing", "markup"]
categories = ["parser-implementations"]

[dependencies]
nom = "8.0.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "huml_benchmarks"
harness = false

[[bench]]
name = "serde_benchmarks"
harness = false
